<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.github.marcocipriani01.roverbluetooth.SettingsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="false">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/Save_speed_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:checked="true"
                android:text="@string/save_speed" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/Keep_screen_on_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Save_speed_switch"
                android:layout_alignStart="@+id/Save_speed_switch"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:checked="true"
                android:text="@string/keep_screen_on" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/BT_auto_on_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView2"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:checked="true"
                android:text="@string/bt_auto_on" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/BT_auto_off_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/BT_auto_on_switch"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:checked="false"
                android:text="@string/bt_auto_off" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/BT_auto_connect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/BT_auto_off_switch"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:checked="true"
                android:text="@string/bt_auto_connect" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:text="@string/general_settings"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView4"
                android:layout_alignParentStart="true"
                android:layout_marginTop="16dp"
                android:text="@string/connectivity"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/BT_auto_connect"
                android:layout_alignParentStart="true"
                android:layout_marginTop="16dp"
                android:text="@string/open_source"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/Website_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView3"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:autoLink="web"
                android:clickable="true"
                android:focusable="true"
                android:onClick="visitMySite"
                android:text="@string/visit_website"
                android:textColor="@color/colorAccent" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Keep_screen_on_switch"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/accelerometer_speed"
                android:textColor="@android:color/black" />

            <SeekBar
                android:id="@+id/sensor_speed_seekbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Keep_screen_on_switch"
                android:layout_alignEnd="@+id/Keep_screen_on_switch"
                android:layout_marginStart="50dp"
                android:layout_marginTop="7dp"
                android:layout_toEndOf="@+id/textView4"
                android:max="3"
                android:maxHeight="10dp"
                android:minHeight="10dp"
                android:progress="3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Website_link"
                android:layout_alignParentStart="true"
                android:text="@string/license"
                android:textStyle="bold" />

        </RelativeLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:onClick="shareAction"
        android:src="@drawable/share_material"
        app:useCompatPadding="true"
        tools:ignore="ContentDescription" />
</RelativeLayout>